chore: Fix sonar issues (#18860)